# github-actions-library

./: .gitignore  README.md  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
src/my_math/: my_math.py
src/tests/: test_catalan_number.py  test_factorial.py  test_fibonacci.py
