[tool.poetry]
name = "my-math"
version = "0.1.0"
description = "A library with mathematical functions."
authors = ["Mike Rothenhäusler <mike.rothenhaeusler@inlinity.ai>"]
readme = "README.md"
packages = [
    { include = "my_math", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
